# sansio-tld-parser

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml
tests/: fixtures.py  test_domain_parser.py  test_list_parser.py
tld_parser/: __init__.py  errors.py  parser.py
